--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,6 @@
   overflow-y: auto;
 }
 
-
-
-
-
-
-
 @layer base{
     
 html {
@@ -26,7 +20,7 @@ html {
 }
 
 body {
-  font-family: "Playfair Display", serif;
+  font-family: "Playfair Display", sans-serif;
 }
 
 li {
@@ -34,9 +28,39 @@ li {
 }
 
 h2 {
-  @apply text-xl font-bold;
+  @apply text-xl font-bold font-thin;
 }
 h1{
-    font-family: "Playfair Display", serif;
+    font-family: "Playfair Display", sans-serif;
 }
+}
+
+
+h2 {
+  font-family: 'Georgia', serif;
+  font-style: italic;
+  color: #34436B;
+  font-weight: 700;
+  font-size: 2em;
+  position: relative;
+  padding: 0 20px;
+}
+
+h2::before,
+h2::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 1px;
+  width: 30px;
+  background: #13152A;
+}
+
+h2::before {
+  left: -40px;
+}
+
+h2::after {
+  right: -40px;
 }
